# vcpkg-cmake-starter

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  vcpkg-configuration.json  vcpkg.json
cmake/: ProjectConfig.cmake.in
